fix: avoid too much margin on front page

--- a/fx/src/static/style.css
+++ b/fx/src/static/style.css
@@ -61,6 +61,12 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.1;
 }
 
+.post-preview {
+    h1, h2, h3, h4, h5, h6 {
+        margin-top: 0.5em;
+    }
+}
+
 a {
     color: var(--accent);
 }
